add delete function

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,6 +5,9 @@
   <li>
     {{this.name}}
     <a href="./records/{{this._id}}/edit">Edit</a>
+    <form action="./records/{{this._id}}/delete" method="POST" style="display: inline;">
+      <button type="submit">Delete</button>
+    </form>
   </li>
   {{/each}}
 </ul>
