--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,4 +1,7 @@
 <form action="/records" method="POST">
-  <input type="text" placeholder="name" name="name">
+  <input type="text" name="name" placeholder="name">
+  <input type="text" name="date" placeholder="date">
+  <input type="text" name="category" placeholder="category">
+  <input type="number" name="amount" placeholder="amount" step="1" min="0">
   <button type="submit">Create</button>
 </form>
