--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/records/{{record._id}}/edit" method="POST">
+<form action="/records/{{record._id}}?_method=PUT" method="POST">
   <input type="text" name="name" placeholder="name" value="{{record.name}}">
   <input type="text" name="date" placeholder="date" value="{{record.date}}">
   <input type="text" name="category" placeholder="category" value="{{record.category}}">
