add default date, select category in new page

--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,7 +1,14 @@
 <form action="/records" method="POST">
   <input type="text" name="name" placeholder="name">
-  <input type="text" name="date" placeholder="date">
-  <input type="text" name="category" placeholder="category">
+  <input type="date" name="date" placeholder="date" value="{{today}}">
+  <select name="category" required>
+    <option value="" selected disabled>選擇類別</option>
+    <option value="家居物業">家居物業</option>
+    <option value="交通出行">交通出行</option>
+    <option value="休閒娛樂">休閒娛樂</option>
+    <option value="餐飲食品">餐飲食品</option>
+    <option value="其它">其它</option>
+  </select>
   <input type="number" name="amount" placeholder="amount" step="1" min="0">
   <button type="submit">Create</button>
 </form>
