--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,6 +1,6 @@
 <form action="/records/{{record._id}}?_method=PUT" method="POST">
   <input type="text" name="name" placeholder="name" value="{{record.name}}">
-  <input type="text" name="date" placeholder="date" value="{{record.date}}">
+  <input type="date" name="date" placeholder="date" value="{{record.date}}">
   <input type="text" name="category" placeholder="category" value="{{record.category}}">
   <input type="number" name="amount" placeholder="amount" step="1" min="0" value={{record.amount}}>
   <button type="submit">Save</button>
