--- a/views/new.hbs
+++ b/views/new.hbs
@@ -9,6 +9,6 @@
     <option value="餐飲食品">餐飲食品</option>
     <option value="其它">其它</option>
   </select>
-  <input type="number" name="amount" placeholder="amount" step="1" min="0">
+  <input type="number" name="amount" placeholder="amount" step="1" min="0" value="0" required>
   <button type="submit">Create</button>
 </form>
