--- a/views/new.hbs
+++ b/views/new.hbs
@@ -3,11 +3,11 @@
   <input type="date" name="date" placeholder="date" value="{{today}}">
   <select name="category" required>
     <option value="" selected disabled>選擇類別</option>
-    <option value="家居物業">家居物業</option>
-    <option value="交通出行">交通出行</option>
-    <option value="休閒娛樂">休閒娛樂</option>
-    <option value="餐飲食品">餐飲食品</option>
-    <option value="其它">其它</option>
+    <option value="isHome">家居物業</option>
+    <option value="isTraffic">交通出行</option>
+    <option value="isEntertainment">休閒娛樂</option>
+    <option value="isFood">餐飲食品</option>
+    <option value="isOthers">其它</option>
   </select>
   <input type="number" name="amount" placeholder="amount" step="1" min="0" value="0" required>
   <button type="submit">Create</button>
