add filter category function in home page

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,7 @@
 <form action="/">
   <select name="category" onchange="this.form.submit();">
-    <option value="" selected disabled>選擇類別</option>
+    <option value="" selected disabled>類別</option>
+    <option value="isAll">全部選取</option>
     <option value="isHome">家居物業</option>
     <option value="isTraffic">交通出行</option>
     <option value="isEntertainment">休閒娛樂</option>
