--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,6 +8,7 @@
   <title>Expense Tracker</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/a8003775e6.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="bg-light">
