--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,11 @@
 <div class="container" style="max-width: 800px; min-width:500px">
 
-  <div class="row d-flex justify-content-between align-items-center my-5">
-    <div class="col">
-      <h3>Total Amount: ${{totalAmount}}</h3>
+  <div class="row d-flex justify-content-center align-items-center my-5">
+    <div class="col-auto d-flex">
+      <p class="mr-2">總金額:</p>
+      <h2 class="mb-0" style="font-size: 3em; color:brown;">${{totalAmount}}</h2>
     </div>
-    <div class="col">
+    <div class="col-4">
       <form action="/">
         <select class="form-control" name="category" onchange="this.form.submit();" style="min-width: 30%;">
           <option value="" selected disabled>類別</option>
