--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,18 +22,16 @@
 
   {{#each records}}
   <div class="row">
-    <div class="col col-md-8 d-flex elliot">
-      <div class="col-auto p-0 text-center" style="min-width: 3em;">
-        <h2>{{{this.categoryIconCode}}}</h2>
+    <div class="col col-md-8 d-flex main-record px-2 py-3">
+      <div class="col-auto d-flex justify-content-center align-items-center p-0" style="min-width: 3em;">
+        <h2 class="m-0">{{{this.categoryIconCode}}}</h2>
       </div>
       <div class="col d-flex flex-column">
-        <h4>{{this.name}}</h4>
-        <p>{{this.date}}</p>
+        <h4 class="m-0">{{this.name}}</h4>
+        <p class="m-0">{{this.date}}</p>
       </div>
-      <div class="col d-flex align-items-center">
-        <div class="col-6 text-right p-0">
-          <h6>${{this.amount}}</h6>
-        </div>
+      <div class="col d-flex align-items-center justify-content-end p-0">
+        <h6 class="m-0">${{this.amount}}</h6>
       </div>
     </div>
     <div class="col-auto d-flex align-items-center">
