--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<div class="container" style="max-width: 800px; min-width:500px">
+<div class="container" style="max-width: 800px; min-width:420px">
 
   <div class="row d-flex justify-content-center align-items-center my-5">
     <div class="col-auto d-flex">
@@ -30,7 +30,7 @@
         <h4 class="m-0">{{this.name}}</h4>
         <p class="m-0">{{this.date}}</p>
       </div>
-      <div class="col d-flex align-items-center justify-content-end p-0">
+      <div class="col-auto d-flex align-items-center justify-content-end p-0">
         <h6 class="m-0">${{this.amount}}</h6>
       </div>
     </div>
