adjust alignment of select, totalAmount, and Create button

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,8 +15,9 @@
 <body class="bg-light">
   <header>
     <nav class="navbar navbar-dark bg-dark">
-      <a href="/" class="navbar-brand">Expense Tracker</a>
-      <a href="/records/new" class="btn btn-outline-light">Create</a>
+      <a href="/" class="navbar-brand">
+        <h3 class="m-0">家庭記帳本</h3>
+      </a>
     </nav>
   </header>
 
