--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,10 @@
 <div class="container" style="max-width: 800px; min-width:420px">
 
-  <div class="row d-flex justify-content-center align-items-center my-5">
-    <div class="col-auto d-flex">
-      <p class="mr-2">總金額:</p>
-      <h2 class="mb-0" style="font-size: 3em; color:#A63F03;">${{totalAmount}}</h2>
-    </div>
-    <div class="col-4">
+  <div class="row">
+    <div class="col-12 col-md-8 p-0">
+
       <form action="/">
-        <select class="form-control" name="category" onchange="this.form.submit();" style="min-width: 30%;">
+        <select class="form-control mt-5" name="category" onchange="this.form.submit();" style="min-width: 30%;">
           <option value="" selected disabled>類別</option>
           <option value="isAll" {{#if categoryObject.isAll}}selected{{/if}}>全部選取</option>
           <option value="isHome" {{#if categoryObject.isHome}}selected{{/if}}>家居物業</option>
@@ -17,6 +14,17 @@
           <option value="isOthers" {{#if categoryObject.isOthers}}selected{{/if}}>其它</option>
         </select>
       </form>
+
+      <div class="d-flex justify-content-around align-items-center my-4">
+
+        <div class="d-flex">
+          <p class="mr-2">總金額:</p>
+          <h2 class="mb-0" style="font-size: 3em; color:#A63F03;">${{totalAmount}}</h2>
+        </div>
+
+        <a href="/records/new" class="btn btn-outline-dark">新增</a>
+      </div>
+
     </div>
   </div>
 
@@ -34,10 +42,10 @@
         <h6 class="m-0">${{this.amount}}</h6>
       </div>
     </div>
-    <div class="col-auto d-flex align-items-center">
-      <a class="btn btn-outline-dark" href="./records/{{this._id}}/edit">Edit</a>
+    <div class="col-auto d-flex align-items-center pr-0">
+      <a class="btn btn-outline-dark" href="./records/{{this._id}}/edit">編輯</a>
       <form action="./records/{{this._id}}?_method=DELETE" method="POST" style="display: inline;">
-        <button class="btn btn-outline-danger ml-2" type="submit">Delete</button>
+        <button class="btn btn-outline-danger ml-2" type="submit">刪除</button>
       </form>
     </div>
   </div>
