--- a/views/index.hbs
+++ b/views/index.hbs
@@ -19,10 +19,10 @@
 
         <div class="d-flex">
           <p class="mr-2">總金額:</p>
-          <h2 class="mb-0" style="font-size: 3em; color:#A63F03;">${{totalAmount}}</h2>
+          <h2 class="mb-0" style="font-size: 4em; color:#A63F03;">${{totalAmount}}</h2>
         </div>
 
-        <a href="/records/new" class="btn btn-outline-dark">新增</a>
+        <a href="/records/new" class="btn btn-lg btn-dark">新增</a>
       </div>
 
     </div>
@@ -31,7 +31,7 @@
   {{#each records}}
   <div class="row">
     <div class="col col-md-8 d-flex main-record px-2 py-3">
-      <div class="col-auto d-flex justify-content-center align-items-center p-0" style="min-width: 3em;">
+      <div class="col-auto d-flex justify-content-center align-items-center p-0" style="min-width: 3em; color:#800020;">
         <h2 class="m-0">{{{this.categoryIconCode}}}</h2>
       </div>
       <div class="col d-flex flex-column">
@@ -39,13 +39,13 @@
         <p class="m-0">{{this.date}}</p>
       </div>
       <div class="col-auto d-flex align-items-center justify-content-end p-0">
-        <h6 class="m-0">${{this.amount}}</h6>
+        <h6 class="m-0">{{this.amount}}</h6>
       </div>
     </div>
     <div class="col-auto d-flex align-items-center pr-0">
-      <a class="btn btn-outline-dark" href="./records/{{this._id}}/edit">編輯</a>
+      <a class="btn btn-sm btn-outline-dark" href="./records/{{this._id}}/edit">編輯</a>
       <form action="./records/{{this._id}}?_method=DELETE" method="POST" style="display: inline;">
-        <button class="btn btn-outline-danger ml-2" type="submit">刪除</button>
+        <button class="btn btn-sm btn-outline-danger ml-2" type="submit">刪除</button>
       </form>
     </div>
   </div>
