--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,1 +1,17 @@
-<h2>Login</h2>
+<form action="/users/login" method="POST">
+
+  <div class="form-group">
+    <label for="email">Email</label>
+    <input type="email" name="email" id="email" placeholder="輸入Email帳號">
+  </div>
+
+  <div class="form-group">
+    <label for="password">密碼</label>
+    <input type="password" name="password" id="password" placeholder="輸入密碼">
+  </div>
+
+  <button type="submit">登入</button>
+  <p>
+    尚未申請帳號？ <a href="/users/register">註冊</a>
+  </p>
+</form>
