--- a/views/register.hbs
+++ b/views/register.hbs
@@ -2,22 +2,22 @@
 
   <div class="form-group">
     <label for="name">姓名</label>
-    <input type="name" name="name" id="name" placeholder="輸入姓名">
+    <input type="name" name="name" id="name" placeholder="輸入姓名" value={{name}}>
   </div>
 
   <div class="form-group">
     <label for="email">Email</label>
-    <input type="email" name="email" id="email" placeholder="輸入Email帳號">
+    <input type="email" name="email" id="email" placeholder="輸入Email帳號" value={{email}}>
   </div>
 
   <div class="form-group">
     <label for="password">密碼</label>
-    <input type="password" name="password" id="password" placeholder="輸入密碼">
+    <input type="password" name="password" id="password" placeholder="輸入密碼" value={{password}}>
   </div>
 
   <div class="form-group">
     <label for="confirmPassword">確認密碼</label>
-    <input type="password" name="confirmPassword" id="confirmPassword" placeholder="再次輸入密碼">
+    <input type="password" name="confirmPassword" id="confirmPassword" placeholder="再次輸入密碼" value={{confirmPassword}}>
   </div>
 
   <button type="submit">註冊</button>
