add facebook login & dotenv

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -11,6 +11,8 @@
   </div>
 
   <button type="submit">登入</button>
+  <a href="/auth/facebook">Facebook登入</a>
+
   <p>
     尚未申請帳號？ <a href="/users/register">註冊</a>
   </p>
