--- a/views/register.hbs
+++ b/views/register.hbs
@@ -23,6 +23,7 @@
   </div>
 
   <button type="submit">註冊</button>
+  <a href="/auth/facebook">Facebook登入</a>
 
   <p>
     已有帳號？ <a href="/users/login">登入</a>
