--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -52,6 +52,15 @@
             </div>
           </div>
 
+          <div class="form-group form-row">
+            <div class="col-3">
+              <label for="merchant" class="col-form-label">店家</label>
+            </div>
+            <div class="col-9">
+              <input class="form-control" type="text" name="name" placeholder="name" value="{{record.name}}" required>
+            </div>
+          </div>
+
           <div class="d-flex justify-content-end">
             <button class="btn btn-dark" type="submit">儲存</button>
             <a class="btn btn-dark ml-2" href="/">返回</a>
