--- a/views/index.hbs
+++ b/views/index.hbs
@@ -39,24 +39,27 @@
 
   {{#each records}}
   <div class="row">
+
     <div class="col col-md-8 d-flex main-record px-2 py-3">
       <div class="col-auto d-flex justify-content-center align-items-center p-0" style="min-width: 3em; color:#800020;">
         <h2 class="m-0">{{{this.categoryIconCode}}}</h2>
       </div>
       <div class="col d-flex flex-column">
         <h4 class="m-0">{{this.name}}</h4>
-        <p class="m-0">{{this.date}}</p>
+        <p class="m-0">{{convertToDateString this.date}}</p>
       </div>
       <div class="col-auto d-flex align-items-center justify-content-end p-0">
         <h6 class="m-0">{{this.amount}}</h6>
       </div>
     </div>
+
     <div class="col-auto d-flex align-items-center pr-0">
       <a class="btn btn-sm btn-outline-dark" href="./records/{{this._id}}/edit">編輯</a>
       <form action="./records/{{this._id}}?_method=DELETE" method="POST" style="display: inline;">
         <button class="btn btn-sm btn-outline-danger ml-2" type="submit">刪除</button>
       </form>
     </div>
+
   </div>
   {{/each}}
 
