--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,3 +1,5 @@
+{{> message}}
+
 <dev class="container">
   <div class="row">
     <div class="card mx-auto col-12" style="max-width: 500px;">
@@ -21,7 +23,7 @@
             </div>
             <div class="col-9">
               <input class="form-control" type="date" name="date" placeholder="date"
-                value="{{convertToDateString record.date}}">
+                value="{{convertToDateString record.date}}" required>
             </div>
           </div>
 
@@ -30,9 +32,9 @@
               <label for="name" class="col-form-label">分類</label>
             </div>
             <div class="col-9">
-              <select class="form-control" name="category" required>
+              <select class="form-control" name="category">
                 {{#each categories}}
-                <option value="{{this}}" {{#isSame this ../category}}selected{{/isSame}}>{{this}}</option>
+                <option value="{{this}}" {{#isSame this ../record.category}}selected{{/isSame}}>{{this}}</option>
                 {{/each}}
                 {{!-- <option value="isHome" {{#if categoryObject.isHome}} selected {{/if}}>家居物業</option>
                 <option value="isTraffic" {{#if categoryObject.isTraffic}} selected {{/if}}>交通出行</option>
@@ -58,7 +60,8 @@
               <label for="merchant" class="col-form-label">店家</label>
             </div>
             <div class="col-9">
-              <input class="form-control" type="text" name="name" placeholder="name" value="{{record.name}}" required>
+              <input class="form-control" type="text" name="merchant" placeholder="merchant" value="{{record.merchant}}"
+                required>
             </div>
           </div>
 
