--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,20 +4,27 @@
     <div class="col-12 col-md-8 p-0">
 
       <form action="/">
-        <select class="form-control mt-5" name="category" onchange="this.form.submit();" style="min-width: 30%;">
-          <option value="isAll" {{#isSame category isAll}}selected{{/isSame}}>全部選取</option>
-          {{#each categories}}
-          <option value="{{this}}" {{#isSame this ../category}}selected{{/isSame}}>{{this}}</option>
-          {{/each}}
-        </select>
-
-        <select class="form-control mt-5" name="monthIndex" onchange="this.form.submit();" style="min-width: 30%;">
-          <option value="isAll" {{#isSame month isAll}}selected{{/isSame}}>全部選取</option>
-          {{#each months}}
-          <option value="{{this.index}}" {{#isSame this.index ../monthIndex}}selected{{/isSame}}>{{this.value}}</option>
-          {{/each}}
-        </select>
-
+        <div class="container mt-5">
+          <div class="row">
+            <label class="col-auto" for="category">類別</label>
+            <select class="form-control col" name="category" onchange="this.form.submit();" style="min-width: 30%;">
+              <option value="isAll" {{#isSame category isAll}}selected{{/isSame}}>全部選取</option>
+              {{#each categories}}
+              <option value="{{this}}" {{#isSame this ../category}}selected{{/isSame}}>{{this}}</option>
+              {{/each}}
+            </select>
+          </div>
+          <div class="row mt-3">
+            <label class="col-auto" for="monthIndex">月份</label>
+            <select class="form-control col" name="monthIndex" onchange="this.form.submit();" style="min-width: 30%;">
+              <option value="isAll" {{#isSame month isAll}}selected{{/isSame}}>全部選取</option>
+              {{#each months}}
+              <option value="{{this.index}}" {{#isSame this.index ../monthIndex}}selected{{/isSame}}>{{this.value}}
+              </option>
+              {{/each}}
+            </select>
+          </div>
+        </div>
       </form>
 
       {{!-- <form action="/">
