--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,40 +4,24 @@
     <div class="col-12 col-md-8 p-0">
 
       <form action="/">
-        <div class="container mt-5">
-          <div class="row">
-            <label class="col-auto" for="category">類別</label>
-            <select class="form-control col" name="category" onchange="this.form.submit();" style="min-width: 30%;">
-              <option value="isAll" {{#isSame category isAll}}selected{{/isSame}}>全部選取</option>
-              {{#each categories}}
-              <option value="{{this}}" {{#isSame this ../category}}selected{{/isSame}}>{{this}}</option>
-              {{/each}}
-            </select>
-          </div>
-          <div class="row mt-3">
-            <label class="col-auto" for="monthIndex">月份</label>
-            <select class="form-control col" name="monthIndex" onchange="this.form.submit();" style="min-width: 30%;">
-              <option value="isAll" {{#isSame month isAll}}selected{{/isSame}}>全部選取</option>
-              {{#each months}}
-              <option value="{{this.index}}" {{#isSame this.index ../monthIndex}}selected{{/isSame}}>{{this.value}}
-              </option>
-              {{/each}}
-            </select>
-          </div>
+        <div class="d-flex mt-5">
+          <select class="form-control mr-1" name="category" onchange="this.form.submit();" style="min-width: 30%;">
+            <option value="isAll" {{#isSame category isAll}}selected{{/isSame}}>所有類別</option>
+            {{#each categories}}
+            <option value="{{this}}" {{#isSame this ../category}}selected{{/isSame}}>{{this}}</option>
+            {{/each}}
+          </select>
+          <select class="form-control ml-1" name="monthIndex" onchange="this.form.submit();" style="min-width: 30%;">
+            <option value="isAll" {{#isSame month isAll}}selected{{/isSame}}>所有月份</option>
+            {{#each months}}
+            <option value="{{this.index}}" {{#isSame this.index ../monthIndex}}selected{{/isSame}}>{{this.value}}
+            </option>
+            {{/each}}
+          </select>
         </div>
-      </form>
 
-      {{!-- <form action="/">
-        <select class="form-control mt-5" name="category" onchange="this.form.submit();" style="min-width: 30%;">
-          <option value="isAll" selected disabled>類別</option>
-          <option value="isAll" {{#if categoryObject.isAll}}selected{{/if}}>全部選取</option>
-          <option value="isHome" {{#if categoryObject.isHome}}selected{{/if}}>家居物業</option>
-          <option value="isTraffic" {{#if categoryObject.isTraffic}}selected{{/if}}>交通出行</option>
-          <option value="isEntertainment" {{#if categoryObject.isEntertainment}}selected{{/if}}>休閒娛樂</option>
-          <option value="isFood" {{#if categoryObject.isFood}}selected{{/if}}>餐飲食品</option>
-          <option value="isOthers" {{#if categoryObject.isOthers}}selected{{/if}}>其它</option>
-        </select>
-      </form> --}}
+
+      </form>
 
       <div class="d-flex justify-content-around align-items-center my-4">
 
